# conduct

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  shell.nix  tauri.conf.json
.github/workflows/: release.yml  static_analysis.yml
bindings/: ResolvedElementData.ts  ResolvedElementResult.ts  VersionControlFile.ts
docs/: Gemfile  _config.yml  gemset.nix  index.md  shell.nix
docs/internal/assets/: asset-load-order.md  assets.md  index.md
docs/internal/element-operators/: department_is.md  department_is_not.md  depend.md  index.md  scene_local.md  shot_local.md
docs/internal/load-order-operators/: department-load.md  department-switch.md  index.md
docs/internal/shots/: index.md
docs/internal/version_control/: direct.md  index.md  symlink.md  versioned_directories.md
example/basic/: conduct  manifest.yaml
integration/blender/: __init__.py  export.py  export_menu.py  flake.nix  load_asset.py  menu.py  project_browser.py  properties.py  select_project.py  shell.nix  utils.py
integration/common/: conduct.py
integration/houdini/: Conduct.json  MainMenuCommon.xml  README.md
integration/houdini/otls/: LAGMACHINE.Conduct.hdalc
integration/inkscape/: conduct_create_setup.inx  conduct_create_setup.py  conduct_export.inx  conduct_export.py  shell.nix
integration/material-maker/: project.godot
integration/material-maker/com_lagmachine_conduct/: conduct.gd  conduct.gd.uid  icon.svg.import  plugin.gd  plugin.gd.uid  plugin.tscn
integration/material-maker/conduct-material-maker/: icon.svg.import  project.godot
src/: core.rs  gui.rs  main.rs
src/cli/: args.rs  command_create.rs  command_summary.rs  commands.rs  mod.rs  result.rs
src/core/: asset.rs  context.rs  department.rs  element.rs  error.rs  format.rs  mod.rs  program.rs  project.rs  tests.rs  version_control.rs
src/core/commands/: args.rs  command_create.rs  command_dialog.rs  command_export.rs  command_get_asset_tree.rs  command_ingest.rs  command_list_assets.rs  command_list_elements.rs  command_list_export_formats.rs  command_list_shots.rs  command_load.rs  command_load_assets.rs  command_resolve_elements.rs  command_save.rs  command_setup.rs  command_summary.rs  error.rs  mod.rs
src/core/element/: element.rs  element_collection.rs  element_or_collection.rs  (+4 more)
src/gui/: api.rs  api_result.rs  embedded_files.rs  message.rs  mod.rs  router.rs  update.rs  view.rs
src/utils/: mime.rs
ui/: api.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.jsx  App.tsx  api.js  api.ts  index.tsx
(+69 files in other folders)
