[package]
name = "conduct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[dependencies]
clap = { version = "4.5.20", features=["derive"] }
enum_dispatch = "0.3.13"
include_directory = "0.1.1"
indexmap = { version = "2.6.0", features = ["serde"] }
log = "0.4.22"
matchit = "0.8.4"
path-absolutize = "3.1.1"
pathdiff = "0.2.2"
query-string-builder = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
stderrlog = "0.6.0"
tao = "0.30.3"
ts-rs = { version = "10.0.0", features = ["serde-compat"] }
url = "2.5.2"
wry = { version = "0.46.3", features = ["linux-body"] }

[dev-dependencies]
colored = "2.1.0"
similar = "2.6.0"
